--- a/README
+++ b/README
@@ -22,14 +22,16 @@ ucloud 目录:
 
 使用步骤:
 
-#编译 sdk 静态库
-1. cd ucloud
-   make clean && make
-   生成 libufilecppsdk.a
+### 编译 sdk 静态库
+mkdir build
+cd build
+cmake ..
+make
+make install
 
-#查阅演示程序
-2. cd ../demo
-   make
+### 查阅演示程序
+cd demo
+./demo
 
-#使用 SDK
-3.  可以使用之前生成的静态库或者直接包含源码目录.
+### 使用 SDK
+可以使用之前生成的静态库或者直接包含源码目录.
