--- a/README
+++ b/README
@@ -18,7 +18,7 @@ ucloud 目录:
     该目录是 SDK 具体实现.
 
 使用该 SDK 包时请配置相关配置文件,配置文件的路径为 /etc/ufilesdk.conf 或者 ./ufilesdk.conf
-具体配置格式请参考 SDK 包中的 ucloud/config/config.h 文件的描述.
+具体配置格式请参考 SDK 包中的 ucloud/include/ufile-cppsdk/config.h 文件的描述.
 
 使用步骤:
 
